--- a/210.html
+++ b/210.html
@@ -1,28 +1,25 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
- <title>Document</title>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<meta name="viewport" content="maximum-scale-1.0,minimum-scale-1.0,user-scalable-0,width=device-width,initial-scale=1.0">
+	<style type="text/css">
+	body{margin: 0}
+  header{width: 100%;height: 50px;background: red}
+  aside{width: 20%;height: 540px;background: #708090;float: left;}
+  section{width: 80%;height: 540px;background: #d8bfd8;float: left;}
+  footer{width: 100%;height: 50px;background: #f0f;clear: left;}
+
+
+
+	</style>
 </head>
 <body>
- <form action="">
-  <h3>你的本命英雄是啥</h3>
-<input type="checkbox" name="hh" value="A">不知火舞
-<input type="checkbox" name="hh" value="B">李白
-<input type="checkbox" name="hh" value="C" checked="checked">凯
-<input type="checkbox" name="hh" value="D">猴子
-
-
- </form>
- <form action="">
-  <h3>你是大神还是坑比</h3>
-<input type="radio" name="hh" value="A" checked="">坑比
-<input type="radio" name="hh" value="B">大神
-
-
-
-
- </form>
- <hr>
+	<header></header>
+	<aside></aside>
+	<section></section>
+	<footer></footer>
 </body>
 </html>
