--- a/2.2.10.html
+++ b/2.2.10.html
@@ -24,7 +24,7 @@ figure{padding: 0px}
 <body>
 	<header>
 		<hgroup>
-			<img src="2.10/ss.png">
+			<img src="ss.png">
 			<h4>移动端页面</h4>
 		</hgroup>
 
@@ -37,12 +37,12 @@ figure{padding: 0px}
 
 	<ul>
 		
-			<li><a href=""><img src="2.10/zhi.png" alt=""></a></li>
-			<li><a href=""><img src="2.10/cu.png" alt=""></a></li>
-			<li><a href=""><img src="2.10/ding.png" alt=""></a></li>
-			<li><a href=""><img src="2.10/ka.png" alt=""></a></li>
-			<li><a href=""><img src="2.10/vip.png" alt=""></a></li>
-			<li><a href=""><img src="2.10/sc.png" alt=""></a></li>
+			<li><a href=""><img src="zhi.png" alt=""></a></li>
+			<li><a href=""><img src="cu.png" alt=""></a></li>
+			<li><a href=""><img src="ding.png" alt=""></a></li>
+			<li><a href=""><img src="ka.png" alt=""></a></li>
+			<li><a href=""><img src="vip.png" alt=""></a></li>
+			<li><a href=""><img src="sc.png" alt=""></a></li>
 		
 	</ul>
 		</nav>
@@ -90,11 +90,11 @@ figure{padding: 0px}
 <ui>
   
 		<li><a href=""><img src="2.10/zy.png" alt="" width="45"></a></li>
-			<li><a href=""><img src="2.10/qb.png" alt="" width="45"></a></li>
-			<li><a href=""><img src="2.10/gw.png" alt="" width="45"></a></li>
-			<li><a href=""><img src="2.10/dl.png" alt="" width="45"></a></li>
-			<li><a href=""><img src="2.10/vip.png" alt="" width="45"></a></li>
-			<li><a href=""><img src="2.10/vip.png" alt="" width="45"></a></li>
+			<li><a href=""><img src="qb.png" alt="" width="45"></a></li>
+			<li><a href=""><img src="gw.png" alt="" width="45"></a></li>
+			<li><a href=""><img src="dl.png" alt="" width="45"></a></li>
+			<li><a href=""><img src="vip.png" alt="" width="45"></a></li>
+			<li><a href=""><img src="vip.png" alt="" width="45"></a></li>
 		</ui>
 		</nav>
 	</footer>
