--- a/2.2.10.html
+++ b/2.2.10.html
@@ -49,39 +49,39 @@ figure{padding: 0px}
 	</aside>
 	<section>
 	<figure>
-		<img src="2.10/sp1.png" alt="" width="50%"><img src="2.10/sp2.png" alt="" width="50%">
+		<img src="sp1.png" alt="" width="50%"><img src="sp2.png" alt="" width="50%">
 	</figure>
 	<figcaption>食品家电</figcaption>	
 	<figure>
-		<img src="2.10/sp3.png" alt="" width="50%"><img src="2.10/sp4.png" alt="" width="50%">
+		<img src="sp3.png" alt="" width="50%"><img src="sp4.png" alt="" width="50%">
 	</figure>
 	<figcaption>汽车</figcaption>	
 	<figure>
-		<img src="2.10/sp5.png" alt="" width="50%"><img src="2.10/sp6.png" alt="" width="50%">
+		<img src="sp5.png" alt="" width="50%"><img src="sp6.png" alt="" width="50%">
 	</figure>
 	<figcaption>数码珠宝</figcaption>	
 	<figure>
-		<img src="2.10/sp1.png" alt="" width="50%"><img src="2.10/sp2.png" alt="" width="50%">
+		<img src="sp1.png" alt="" width="50%"><img src="sp2.png" alt="" width="50%">
 	</figure>
 	<figcaption>食品家电</figcaption>	
 	<figure>
-		<img src="2.10/sp3.png" alt="" width="50%"><img src="2.10/sp4.png" alt="" width="50%">
+		<img src="sp3.png" alt="" width="50%"><img src="sp4.png" alt="" width="50%">
 	</figure>
 	<figcaption>汽车</figcaption>	
 	<figure>
-		<img src="2.10/sp5.png" alt="" width="50%"><img src="2.10/sp6.png" alt="" width="50%">
+		<img src="sp5.png" alt="" width="50%"><img src="sp6.png" alt="" width="50%">
 	</figure>
 	<figcaption>数码珠宝</figcaption>	
 	<figure>
-		<img src="2.10/sp1.png" alt="" width="50%"><img src="2.10/sp2.png" alt="" width="50%">
+		<img src="sp1.png" alt="" width="50%"><img src="sp2.png" alt="" width="50%">
 	</figure>
 	<figcaption>食品家电</figcaption>	
 	<figure>
-		<img src="2.10/sp3.png" alt="" width="50%"><img src="2.10/sp4.png" alt="" width="50%">
+		<img src="sp3.png" alt="" width="50%"><img src="sp4.png" alt="" width="50%">
 	</figure>
 	<figcaption>汽车</figcaption>	
 	<figure>
-		<img src="2.10/sp5.png" alt="" width="50%"><img src="2.10/sp6.png" alt="" width="50%">
+		<img src="sp5.png" alt="" width="50%"><img src="sp6.png" alt="" width="50%">
 	</figure>
 	<figcaption>数码珠宝</figcaption>	
 	</section>
@@ -89,7 +89,7 @@ figure{padding: 0px}
 	<nav>
 <ui>
   
-		<li><a href=""><img src="2.10/zy.png" alt="" width="45"></a></li>
+		<li><a href=""><img src="zy.png" alt="" width="45"></a></li>
 			<li><a href=""><img src="qb.png" alt="" width="45"></a></li>
 			<li><a href=""><img src="gw.png" alt="" width="45"></a></li>
 			<li><a href=""><img src="dl.png" alt="" width="45"></a></li>
